--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "codeception/codeception": "^4.0",
+        "codeception/codeception": ">=4.0",
         "fakerphp/faker": "^1.19",
         "codeception/module-webdriver": ">=1.1",
         "webflo/drupal-finder": "^1.2"
