Add Asserts module to composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "codeception/module-rest": "^2.0",
         "codeception/codeception": "^4.0",
         "codeception/visualception": "^1.0",
+        "codeception/module-asserts": "^2.0",
         "codeception/module-webdriver": "^2.0",
         "codeception/module-phpbrowser": "^1.0",
         "ericmartel/codeception-email-mailhog": "^1.0"
