--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "droptica/drupal-codeception",
     "description": "Codeception toolset for Drupal testing.",
     "type": "package",
+    "license": "GPL-2.0-or-later",
     "repositories": [
         {
             "type": "composer",
@@ -15,7 +16,8 @@
         "webflo/drupal-finder": "^1.2",
         "codeception/module-db": "^2.0",
         "codeception/module-rest": "^2.0",
-        "codeception/codeception": "^4.0",
+        "codeception/codeception": "^4.2",
+        "phpunit/php-code-coverage": "^9.2",
         "codeception/visualception": "^1.0",
         "codeception/module-asserts": "^2.0",
         "codeception/module-webdriver": "^2.0",
@@ -26,14 +28,8 @@
         "composer/installers": "^2.2",
         "drupal/core": "^9"
     },
-    "license": "GPL-2.0",
-    "authors": [
-        {
-            "name": "Guntis Jakovins",
-            "email": "guntis.jakovins@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Codeception\\": "src/Codeception"
