Add ApiValidator labs to composer.json

--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,14 @@
         "fakerphp/faker": "^1.2",
         "phpunit/phpunit": "^9.5",
         "vlucas/phpdotenv": "^5.4",
+        
         "webflo/drupal-finder": "^1.2",
         "codeception/module-db": "^2.0",
         "codeception/module-rest": "^2.0",
         "codeception/codeception": "^4.2",
         "phpunit/php-code-coverage": "^9.2",
         "codeception/visualception": "^1.0",
+        "eleven-labs/api-validator": "^0.7",
         "codeception/module-asserts": "^2.0",
         "codeception/module-webdriver": "^2.0",
         "codeception/module-phpbrowser": "^1.0",
