Change versions of ApiValidator

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "codeception/module-asserts": "^2.0",
         "codeception/module-webdriver": "^2.0",
         "codeception/module-phpbrowser": "^1.0",
-        "awuttig/codeception-api-validator": "^2.0",
+        "awuttig/codeception-api-validator": "dev-master",
         "ericmartel/codeception-email-mailhog": "^1.0"
     },
     "require-dev": {
