--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "phpunit/php-code-coverage": "^9.2",
         "codeception/visualception": "^1.0",
         "eleven-labs/api-validator": "^0.7",
+        "cweagans/composer-patches": "^1.7",
         "codeception/module-asserts": "^2.0",
         "codeception/module-webdriver": "^2.0",
         "codeception/module-phpbrowser": "^1.0",
@@ -35,6 +36,13 @@
     "autoload": {
         "psr-4": {
             "Codeception\\": "src/Codeception"
+        }
+    },
+    "extra": {
+        "patches": {
+            "eleven-labs/api-validator": {
+                "Fix latest PHP notices": "patches/eleven-labs/php-8-fixes.patch"
+            }
         }
     }
 }
