--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "vcs",
+            "url": "thephpleague/openapi-psr7-validator"
         }
     ],
     "require": {
