--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "vlucas/phpdotenv": "^5.4",
         "webflo/drupal-finder": "^1.2",
         "codeception/module-db": "^2.0",
+        "symfony/phpunit-bridge": "^6.2",
         "codeception/module-rest": "^2.0",
         "codeception/codeception": "^4.2",
         "phpunit/php-code-coverage": "^9.2",
@@ -34,6 +35,11 @@
     "autoload": {
         "psr-4": {
             "Codeception\\": "src/Codeception"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
         }
     }
 }
