--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,39 @@
 {
-    "name": "droptica/drupal-codeception",
-    "description": "Codeception toolset for Drupal testing.",
-    "type": "package",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    ],
-    "require": {
-        "codeception/codeception": ">=4.0",
-        "fakerphp/faker": "^1.19",
-        "codeception/module-webdriver": ">=1.1",
-        "webflo/drupal-finder": "^1.2"
-    },
-    "require-dev": {
-        "composer/installers": "^1",
-        "drupal/core": "^8"
-    },
-    "license": "GPL-2.0",
-    "authors": [
-        {
-            "name": "Guntis Jakovins",
-            "email": "guntis.jakovins@gmail.com"
-        }
-    ],
-    "minimum-stability": "stable",
-    "autoload": {
-        "psr-4": {
-            "Codeception\\": "src/Codeception"
-        }
+  "name": "droptica/drupal-codeception",
+  "description": "Codeception toolset for Drupal testing.",
+  "type": "package",
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
     }
+  ],
+  "require": {
+    "codeception/codeception": "^5",
+    "codeception/module-webdriver": "^3",
+    "webflo/drupal-finder": "^1.2",
+    "fakerphp/faker": "^1.19"
+  },
+  "require-dev": {
+    "composer/installers": "^2",
+    "drupal/core": "^10"
+  },
+  "license": "GPL-2.0",
+  "authors": [
+    {
+      "name": "Guntis Jakovins",
+      "email": "guntis.jakovins@gmail.com"
+    }
+  ],
+  "minimum-stability": "stable",
+  "autoload": {
+    "psr-4": {
+      "Codeception\\": "src/Codeception"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
+  }
 }
